la til flere models pluss slette health endepunktet
