# handlers/composite_handler.go
@@ -2,24 +2,19 @@ package handlers
 
 import (
 	"net/http"
-
 	"github.com/SturlaSolheim/mediaCircleBackend/generated"
 	"github.com/SturlaSolheim/mediaCircleBackend/generated/albums"
-	"github.com/SturlaSolheim/mediaCircleBackend/generated/health"
 )
 
 type CompositeHandler struct {
 	albumHandler  albums.ServerInterface
-	healthHandler health.ServerInterface
 }
 
 func NewCompositeHandler(
 	albumHandler albums.ServerInterface,
-	healthHandler health.ServerInterface,
 ) generated.ServerInterface {
 	return &CompositeHandler{
 		albumHandler:  albumHandler,
-		healthHandler: healthHandler,
 	}
 }
 
@@ -33,8 +28,3 @@ func (c *CompositeHandler) CreateAlbum(w http.ResponseWriter, r *http.Request) {
 	c.albumHandler.CreateAlbum(w, r)
 }
 
-// Health
-
-func (c *CompositeHandler) HealthCheck(w http.ResponseWriter, r *http.Request) {
-	c.healthHandler.HealthCheck(w, r)
-}
